--- a/demo.html
+++ b/demo.html
@@ -15,8 +15,8 @@
 </head>
 <body>
 <div id="div1">div1</div>
-<div class="red">   1    </div>
+<div class="green red">   1    </div>
 <div class="red">2</div>
-<div class="red">3</div>
+<div class="red white">3</div>
 </body>
 </html>
