--- a/demo.html
+++ b/demo.html
@@ -2,21 +2,19 @@
 <head>
 <title></title>
 <script type="text/javascript" src="jquery.js"></script>
+<style type="text/css">
+.div1{position:fixed;background:green;width:100px;height:100px;}
+</style>
 <script type="text/javascript">
 	$(function(){
 		//console.log($("#div1").css('background','green'));
 
-		$("div").click(function(){
-			$(this).remove();
-		})
-		console.log($(".red").eq(0).html().trim())
+		$(".div1").center().dragEx();
 	});
 </script>
 </head>
 <body>
-<div id="div1">div1</div>
-<div class="green red">   1    </div>
-<div class="red">2</div>
-<div class="red white">3</div>
+<div class="div1">div1</div>
+<div class="div1">div2</div>
 </body>
 </html>
